[project]
name = "blog-auto-writer-agentic-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.12",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.4",
    "langchain-openrouter>=0.2.6",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.8",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]
